
## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- Updated for adventure mode: `gui/sandbox`, `gui/create-item`, `gui/reveal`
- `markdown`: (reinstated) export unit or item descriptions to a markdown text file
- `adaptation`: (reinstated) inspect or set unit cave adaptation levels
- `fix/engravings`: fix corrupt engraving tiles

## New Features
- `instruments`: new subcommand ``instruments order`` for creating instrument work orders

## Fixes
- `modtools/create-item`: now functions properly when the ``reaction-gloves`` tweak is active
- `quickfort`: don't designate multiple tiles of the same tree for chopping when applying a tree chopping blueprint to a multi-tile tree
- `gui/quantum`: fix processing when creating a quantum dump instead of a quantum stockpile

## Misc Improvements
- `gui/autobutcher`: add shortcuts for butchering/unbutchering all animals
- `combine`: respect container volume limits
- `combine`: reduce combined drink sizes to 25
- `gui/launcher`: add button for copying output to the system clipboard
- `deathcause`: give better responses for vermin remains
- `deathcause`: automatically choose a relevant corpse when a pile of items is selected
- `gui/quantum`: add option for whether a minecart automatically gets ordered and/or attached
- `gui/quantum`: when attaching a minecart, show which minecart was attached
- `gui/quantum`: allow multiple feeder stockpiles to be linked to the minecart route

## Removed

# 50.13-r1.1

## Fixes
- `gui/quantum`: accept all item types in the output stockpile as intended
- `deathcause`: fix error on run

# 50.13-r1

## New Tools
- `gui/unit-info-viewer`: (reinstated) give detailed information on a unit, such as egg laying behavior, body size, birth date, age, and information about their afterlife behavior (if a ghost)
- `gui/quantum`: (reinstated) point and click interface for creating quantum stockpiles or quantum dumps

## Fixes