@@ -3,7 +3,7 @@ unretire-anyone
 
 .. dfhack-tool::
     :summary: Adventure as any living historical figure.
-    :tags: unavailable
+    :tags: adventure embark armok
 
 This tool allows you to play as any living (or undead) historical figure (except
 for deities) in adventure mode.
@@ -12,9 +12,10 @@ To use, simply run the command at the start of adventure mode character
 creation. You will be presented with a searchable list from which you may choose
 your desired historical figure.
 
-This figure will be added to the "Specific Person" list at the bottom of the
-creature selection page. They can then be picked for use as a player character,
-the same as when regaining control of a retired adventurer.
+This figure will be added to the list of people to choose from during character
+creation (the "Specific person" option on the race list). They can then be
+picked for use as a player character, the same as when regaining control of a
+retired adventurer.
 
 Usage
 -----
@@ -27,5 +28,6 @@ Options
 -------
 
 ``-d``, ``--dead``
-    Enables user to unretire a dead historical figure to play as in adventure mode.
-    For instance, a user may wish to unretire and then play as a particular megabeast that had died during world-gen.
+    Enables user to unretire a dead historical figure to play as in adventure
+    mode. For instance, a user may wish to unretire and then play as a
+    particular megabeast that had died during world-gen.
